@@ -5,7 +5,6 @@ import static uk.ac.cam.cl.dtg.isaac.api.Constants.FAST_TRACK_QUESTION_TYPE;
 import static uk.ac.cam.cl.dtg.isaac.api.Constants.FastTrackLevel;
 import static uk.ac.cam.cl.dtg.isaac.api.Constants.QUESTION_TYPE;
 import static uk.ac.cam.cl.dtg.isaac.api.Constants.SEARCH_MAX_WINDOW_SIZE;
-import static uk.ac.cam.cl.dtg.segue.api.Constants.CONTENT_INDEX;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.DEFAULT_RESULTS_LIMIT;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.ID_FIELDNAME;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.TAGS_FIELDNAME;
@@ -16,7 +15,6 @@ import static uk.ac.cam.cl.dtg.segue.api.Constants.UNPROCESSED_SEARCH_FIELD_SUFF
 import com.google.api.client.util.Lists;
 import com.google.api.client.util.Maps;
 import com.google.inject.Inject;
-import com.google.inject.name.Named;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
@@ -24,8 +22,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import uk.ac.cam.cl.dtg.isaac.dos.QuestionValidationResponse;
 import uk.ac.cam.cl.dtg.isaac.dto.GameboardDTO;
 import uk.ac.cam.cl.dtg.isaac.dto.GameboardItem;
@@ -38,9 +34,6 @@ import uk.ac.cam.cl.dtg.segue.dao.content.GitContentManager;
 import uk.ac.cam.cl.dtg.util.PropertiesLoader;
 
 public class FastTrackManger {
-  private static final Logger log = LoggerFactory.getLogger(FastTrackManger.class);
-
-  private final String contentIndex;
   private final GitContentManager contentManager;
   private final GameManager gameboardManager;
   private final Set<String> fastTrackGamebaordIds;
@@ -51,14 +44,12 @@ public class FastTrackManger {
    * @param properties       - Instance of properties Loader
    * @param contentManager   - so we can augment game objects with actual detailed content
    * @param gameboardManager - a gamebaord manager that deals with storing and retrieving gameboards.
-   * @param contentIndex     - the current content index of interest.
    */
   @Inject
   public FastTrackManger(final PropertiesLoader properties, final GitContentManager contentManager,
-                         final GameManager gameboardManager, @Named(CONTENT_INDEX) final String contentIndex) {
+                         final GameManager gameboardManager) {
 
     this.contentManager = contentManager;
-    this.contentIndex = contentIndex;
     this.gameboardManager = gameboardManager;
     String commaSeparatedIds = properties.getProperty(FASTTRACK_GAMEBOARD_WHITELIST);
     this.fastTrackGamebaordIds = new HashSet<>(Arrays.asList(commaSeparatedIds.split(",")));
@@ -83,8 +74,8 @@ public class FastTrackManger {
    */
   public final String getConceptFromQuestionId(final String questionId) throws ContentManagerException {
     Map<String, List<String>> fieldsToMatch = Maps.newHashMap();
-    fieldsToMatch.put(TYPE_FIELDNAME, Arrays.asList(FAST_TRACK_QUESTION_TYPE));
-    fieldsToMatch.put(ID_FIELDNAME + "." + UNPROCESSED_SEARCH_FIELD_SUFFIX, Arrays.asList(questionId));
+    fieldsToMatch.put(TYPE_FIELDNAME, List.of(FAST_TRACK_QUESTION_TYPE));
+    fieldsToMatch.put(ID_FIELDNAME + "." + UNPROCESSED_SEARCH_FIELD_SUFFIX, List.of(questionId));
     ResultsWrapper<ContentDTO> resultsList = contentManager.findByFieldNames(
         ContentService.generateDefaultFieldToMatch(fieldsToMatch), 0, DEFAULT_RESULTS_LIMIT);
 
